deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
  labels:
    app: weather-app
    type: app1
spec:
  template:
    metadata:
      name: weather-pod
      labels:
        app: weather-app
        type: app1
    spec:
        containers:
          - name: weather-image
            image: "besperspektivnyak/weather:latest"
  replicas: 2
  selector:
    matchLabels:
      type: app1

---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather-app
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
